# abi

./: .build-optimize.md  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .opencode.json  .tmp_commit_pages.ps1  .zigversion  1  ABI-MEGA-PLUGIN.md  AGENTS.md  AGENTS_CONCISE.md  API_REFERENCE.md  BENCHMARK_UPGRADE_SUMMARY.md  CHANGELOG.md  CHANGELOG_CONSOLIDATED.md  CHANGELOG_v0.2.0.md  CHANGES.md  CLAUDE.md  CLAUDE.md.patch  CLAUDE_IMPROVEMENTS.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_FINAL.md  CLI_GPU_COMPLETION_SUMMARY.md  CLI_SERVICES_IMPLEMENTATION_SUMMARY.md  CODEBASE_IMPROVEMENTS.md  CODEBASE_IMPROVEMENTS_SUMMARY.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  COMBINE_SESSIONS_PLAN.md  CONTACTS.md  CONTRIBUTING.md  CROSS_PLATFORM_ENHANCEMENT_SUMMARY.md  CROSS_PLATFORM_TESTING_GUIDE.md  DEEP_REFACTOR_COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  (+282 more)
.abi/: tasks.json
.agent/: events.jsonl  scratchpad.md
.cel/: README.md  build.sh  config.sh  lib.sh
.claude/: auto-improve-ledger.jsonl  launch.json  ralph-goal.verify.sh  settings.json  settings.local.json
.claude-plugin/: plugin.json
.codex/: config.toml  hooks.json
.cursor/: README.md
.gemini/: settings.json
.githooks/: README.md  commit-msg  pre-commit
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  self-hosted-runner.md
.next/: trace  trace-build
.qwen/: settings.json  settings.json.orig
.serena/: project.yml
.zed/: settings.json
.zig-bootstrap/: README.md  build.sh  config.sh  lib.sh
Formula/: abi.rb
abi/: SECURITY.md
benchmarks/: README.md  STRUCTURE.md  ai.zig  benchmark_framework.zig  benchmark_suite.zig  ci_integration.zig  concurrency.zig  core_infrastructure.zig  crypto.zig  database.zig  database_benchmark.zig  database_industry.zig  database_insert.zig  database_memory.zig  database_perf.zig  database_search.zig  framework.zig  gpu_backends.zig  industry_standard.zig  legacy.zig  llm_industry.zig  main.zig  memory.zig  mod.zig  network.zig  performance_optimization_benchmark.zig  performance_suite.zig  refactored_performance_test.zig  run.zig  run_competitive.zig  simd.zig  simd_micro.zig  simple_benchmark.zig
bindings/: c_api.zig
bindings/python/: README.md  abi.py  abi_python.zig  abi_python_streaming.zig  pyproject.toml  pytest.ini  setup.py  test_abi.py  test_gpu.py
bindings/python/abi/: __init__.py  config.py  database.py  embeddings.py  gpu.py  llm.py  llm_streaming.py  observability.py  training.py
bindings/python/examples/: basic_usage.py  configuration.py  gpu_acceleration.py  gpu_search.py  llm_inference.py  streaming_inference.py  training_example.py  vector_database.py  vector_search.py
bindings/python/tests/: conftest.py  test_abi.py  test_integration.py  test_observability.py  test_streaming.py  test_training.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/examples/: basic.rs  vector_db.rs
bindings/rust/src/: agent.rs  database.rs  error.rs  ffi.rs  framework.rs  gpu.rs  lib.rs  simd.rs
cell_framework/: CMakeLists.txt  README.md  main.cpp
cell_framework/Cell/: Core.cpp  Core.ixx
completions/: abi.bash  abi.fish  abi.zsh
config/: default.toml  default.zig
deploy/: PRODUCTION_ROLLOUT_PLAN.md  README.md
docker/: Dockerfile
docs/: 404.html  ABI_PROJECT_MEMORY.md  ABI_WDBX_ARCHITECTURE.md  AGENTS.md  AGENTS_EXECUTIVE_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_API_INDEX.md  CONNECTORS.md  CONTRIBUTING_DOCS.md  DEFINITIONS_REFERENCE.md  DEVELOPMENT_GUIDE.md  DOCS_DIGEST.md  DOCUMENTATION_UPDATES.md  ENHANCEMENT_SUMMARY.md  FAQ-agents.md  FINAL_IMPROVEMENTS_SUMMARY.md  GPU_AI_ACCELERATION.md  Gemfile  IMPROVEMENTS_CHANGELOG.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  MODERNIZATION_BLUEPRINT.md  MODULE_ORGANIZATION.md  NETWORK_INFRASTRUCTURE.md  OBSERVABILITY.md  OPTIMIZATION_SUMMARY.md  PATTERNS.md  PERFORMANCE_BASELINE.html  PERFORMANCE_BASELINE.md  PERFORMANCE_GUIDE.md  PLUGIN_ABI_SPECIFICATION.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_SYSTEM.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STRUCTURE.md  PROMPTS.md  README.md  README_DOCS.md  (+127 more)
docs-site/: README.md  generate.py  index.html
docs-src/: SECURITY_AUDIT.md  api_ai-agents.md  api_runtime-concurrency.md  api_runtime-memory.md  api_security.md  benchmarking.md  feature-flags.md  gpu-backend-improvements.md  gpu.md  intro.md  todo.md
examples/: README.md  advanced-features.zig  advanced_zig_gpu.zig  agent.zig  ai_chatbot.zig  ai_core.zig  ai_demo.zig  ai_inference.zig  ai_reasoning.zig  ai_suite.zig  ai_training.zig  analytics.zig  auth.zig  bare_metal_riscv32.zig  bare_metal_thumb.zig  basic-usage.zig  basic_usage.zig  c_test.c  cache.zig  cloud.zig  compute.zig  concurrency.zig  concurrent_pipeline.zig  config.zig  database.zig  demo.zig  demo_http_client.zig  discord.zig  discord_bot_demo.zig  distributed_db.zig  embeddings.zig  enhanced_web_server.zig  gateway.zig  gpu.zig  gpu_acceleration_demo.zig  gpu_ai_acceleration_demo.zig  gpu_neural_network_integration.zig  gpu_training.zig  ha.zig  hello.zig  (+26 more)
l/: init.zig
lang/: README.md
lib/: compat.zig  metrics.zig  mod.zig
mcp/: launcher.sh  servers.json
modern-refactor/: .gitignore  README.md
modernized/: README.md
monitoring/: service-monitor.yaml
performance_reports/: performance_metrics_1757548710421.json  performance_metrics_1757549142510.json  performance_metrics_1757549680018.json  performance_metrics_1757550613671.json  performance_metrics_1757551616240.json  performance_metrics_1758202961061.json  performance_report_1757548710421.md  performance_report_1757549142510.md  performance_report_1757549680018.md  performance_report_1757550613671.md  performance_report_1757551616240.md  performance_report_1758202961061.md
plans/: 2026-02-04-codebase-improvements.md  2026-02-05-claude-md-improvements.md  2026-02-05-examples-docs-alignment.md  2026-02-08-abi-system-v2-integration.md  2026-02-08-codebase-improvements.md  2026-02-08-ralph-loop-zig016-multi-agent-eval.md  2026-02-16-multi-agent-improvements.md  (+1 more)
(+7137 files in other folders)
