[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abi"
version = "0.4.0"
description = "Python bindings for ABI high-performance AI framework"
authors = [{name = "ABI Framework Team", email = "team@abi-framework.dev"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Typing :: Typed",
]
keywords = [
    "ai",
    "llm",
    "vector-database",
    "embeddings",
    "gpu",
    "cuda",
    "vulkan",
    "machine-learning",
    "neural-network",
    "inference",
    "training",
    "streaming",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "isort>=5.0",
]
numpy = ["numpy>=1.20"]
all = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/donaldfilimon/abi"
Documentation = "https://github.com/donaldfilimon/abi#readme"
"Bug Tracker" = "https://github.com/donaldfilimon/abi/issues"
"Source Code" = "https://github.com/donaldfilimon/abi"

[project.scripts]
abi-py = "abi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["abi*"]

[tool.setuptools.package-data]
abi = ["*.so", "*.dylib", "*.dll", "py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
