[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abi-framework"
version = "0.4.0"
description = "Python bindings for ABI Framework - High-performance vector database and AI inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ABI Framework Contributors"}
]
keywords = ["vector-database", "ai", "machine-learning", "embeddings", "simd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
numpy = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/donaldfilimon/abi"
Documentation = "https://github.com/donaldfilimon/abi#readme"
Repository = "https://github.com/donaldfilimon/abi"
Issues = "https://github.com/donaldfilimon/abi/issues"

[tool.setuptools]
py-modules = ["abi"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
