[package]
name = "abi-framework"
version = "0.1.0"
edition = "2021"
authors = ["ABI Team"]
description = "Rust bindings for the ABI high-performance AI and vector database framework"
license = "MIT"
repository = "https://github.com/donaldfilimon/abi"
documentation = "https://docs.rs/abi-framework"
readme = "README.md"
keywords = ["ai", "vector-database", "gpu", "simd", "machine-learning"]
categories = ["api-bindings", "science", "mathematics"]

[lib]
name = "abi"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = ["simd", "database"]
simd = []
database = []
gpu = []
ai = []
full = ["simd", "database", "gpu", "ai"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "vector_db"
path = "examples/vector_db.rs"

[[bench]]
name = "simd_bench"
harness = false
